// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> component should render a html link element with the correct title 1`] = `
.emotion-0 {
  color: #00677F;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:has(span):hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:has(span):hover span {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #003041;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component should render an html link element as secondary 1`] = `
.emotion-0 {
  color: #454545;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:has(span):hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:has(span):hover span {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #131313;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
}

<div>
  <a
    class="emotion-0 emotion-1"
    color="secondary"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;
